# Cpp-Raylib-CMake-Template

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Game/: CMakeLists.txt
Game/res/: some-resource.txt
Game/src/: main.cpp
